# budyk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  config.example.yaml
.github/workflows/: freebsd-build-lite.yml  freebsd-build.yml  linux-build.yml  release.yml
addons/docker/: Dockerfile  docker-compose.yml
addons/freebsd/: Makefile  budyk.rc.d  pkg-descr  pkg-plist
addons/linux/: budyk.service
cmake/: embed_resources.cmake  platform.cmake
docs/: budyk-spec-en.md  budyk-spec-uk.md  budyk.8
rules/: examples.lua  freebsd-defaults.lua
src/: CMakeLists.txt  main.cpp
src/ai/: baseline.cpp  baseline.h  llm_client.cpp  llm_client.h  suggest.cpp  suggest.h
src/collector/: collector.h
src/collector/freebsd/: cpu.c  disk.c  memory.c  network.c  system.c
src/collector/linux/: cpu.c  disk.c  memory.c  network.c  system.c
src/config/: config.cpp  config.h
src/core/: codec.cpp  codec.h  collection_level.h  metric_source.h  sample.cpp  sample.h  sample_c.h
src/hot_buffer/: hot_buffer.cpp  hot_buffer.h
src/rules/: exec_action.cpp  exec_action.h  lua_bindings.cpp  lua_bindings.h  lua_engine.cpp  lua_engine.h  lua_stdlib.cpp  lua_stdlib.h  yaml_compat.cpp  yaml_compat.h
src/scheduler/: scheduler.cpp  scheduler.h
src/storage/: codec.cpp  codec.h  ring_file.cpp  ring_file.h  tier_aggregator.cpp  tier_aggregator.h  tier_manager.cpp  tier_manager.h
src/tui/: tui.cpp  tui.h
src/web/: auth.cpp  auth.h  json.cpp  json.h  server.cpp  server.h  session.cpp  session.h  ws_hub.cpp  ws_hub.h
src/web/static/: index.html
tests/: CMakeLists.txt
tests/unit/: test_auth.cpp  test_baseline.cpp  test_codec.cpp  test_config.cpp  test_exec_action.cpp  test_freebsd_collector.cpp  test_hot_buffer.cpp  test_http_server.cpp  test_json.cpp  test_linux_collector.cpp  test_lua_engine.cpp  test_ring_file.cpp  test_scheduler.cpp  test_session.cpp  test_storage_codec.cpp  test_suggest.cpp  test_tier_aggregator.cpp  test_tier_manager.cpp
